package com.directi.training.dip.exercise_refactored;

import java.io.IOException;

public interface DataSink
{
    void write(String data) throws IOException;
}
